# C-Check

./: .env.example  .gitattributes  .gitignore  C语言AI代码审查平台 详细需求规格说明书（PRD） (1).md  README.md  docker-compose.yml  start.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_review_check_types.py  0003_model_default.py  0004_review_model_log.py  0005_model_deployments.py  0006_review_queue_priority.py  0007_review_file_source_longtext.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: __init__.py  admin.py  auth.py  deps.py  models.py  reports.py  reviews.py
backend/app/core/: bootstrap.py  config.py  security.py
backend/app/db/: models.py  session.py
backend/app/prompts/: default_c_review.md
backend/app/schemas/: admin.py  auth.py  model_response.py  reviews.py
backend/app/services/: check_types.py  model_deployments.py  model_router.py  prompts.py  reports.py  resources.py  review_queue.py  submissions.py
backend/app/tasks/: reviews.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_check_types.py  test_config.py  test_model_router.py  test_models.py  test_resources.py  test_review_retries.py  test_submissions.py
docs/: backend-adaptation-changelog-2026-06-03.md  cloud-native-deployment-runbook-2026-06-04.md  deployment-linux.md  frontend-regression-findings-2026-06-03.md  refactor-changelog-2026-06-13.md  verification.md  vllm-model-deployment-changelog-2026-06-04.md
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  (+2 more)
(+42 files in other folders)
