[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "c-check-backend"
version = "0.1.0"
description = "C language AI code review platform backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "celery[redis]>=5.4,<6",
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.7,<3",
    "pymysql>=1.1,<2",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
